created book-author-publisher entities

--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,4 @@ appsettings.Local.json
 Sumdocs.API/appsettings.Local.json
 /Sumdocs.API/appsettings.Local.json
 BookStoreManagement/BookStoreManagement.sln
+BookStoreManagement.API/appsettings.Local.json
