--- a/BookStoreManagement.API/BookStoreManagement.API.csproj
+++ b/BookStoreManagement.API/BookStoreManagement.API.csproj
@@ -12,7 +12,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.20">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BookStoreManagement.Domain\BookStoreManagement.Domain.csproj" />
   </ItemGroup>
 
 </Project>
