--- a/BookStoreManagement.API/BookStoreManagement.API.csproj
+++ b/BookStoreManagement.API/BookStoreManagement.API.csproj
@@ -8,19 +8,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.20">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BookStoreManagement.Domain\BookStoreManagement.Domain.csproj" />
+    <ProjectReference Include="..\BookStoreManagement.Service\BookStoreManagement.Service.csproj" />
   </ItemGroup>
 
 </Project>
