--- a/BookStoreManagement.API/Properties/launchSettings.json
+++ b/BookStoreManagement.API/Properties/launchSettings.json
@@ -8,7 +8,15 @@
         "ASPNETCORE_ENVIRONMENT": "Local"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7047;http://localhost:5047"
+      "applicationUrl": "http://localhost:5047"
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
