--- a/BookStoreManagement.API/appsettings.Development.json
+++ b/BookStoreManagement.API/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "BOOK_STORE_CONNECTION_STRING": "Data Source=127.0.0.1; port=3306; Database=book_store_database; User ID=root; Password=123456; Connect Timeout=30;"
+    "BOOK_STORE_CONNECTION_STRING": "Server=127.0.0.1; Port=3306; Database=book_store_database; User=root; Password=1234; Connect Timeout=30;"
   }
+
 }
